# phylonaut

src/: CMakeLists.txt  CMakeSettings.json  wASTRAL.cpp  wASTRAL.hpp
src/Analysis/: Analysis.hpp  ConsensusTreeAnalysis.cpp  ConsensusTreeAnalysis.hpp  CountTreesAnalysis.cpp  CountTreesAnalysis.hpp  ScoreAnalysis.hpp  SingleTreeAnalysis.cpp  SingleTreeAnalysis.hpp
src/CladeExtractor/: ASTRALCladeExtractor.cpp  ASTRALCladeExtractor.hpp  CladeExtractor.cpp  CladeExtractor.hpp  DefaultTaxonSetExtractor.hpp  GLOBExtractor.cpp  GLOBExtractor.hpp  SimpleCladeExtractor.cpp  SimpleCladeExtractor.hpp
src/TripartitionScorer/: TripartitionScorer.cpp  TripartitionScorer.hpp
